<?xml version="1.0"?>
<package format="2">
  <name>pointcloud_processor</name>
  <version>0.1.0</version>
  <description>Point cloud processing with voxel grid and RANSAC</description>
  
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>
  
  <!-- Зависимости для сборки и запуска -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  
  <!-- Для Python 3 -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-open3d</exec_depend>
  
  <!-- Для ROS Noetic -->
  <exec_depend>ros-numpy</exec_depend>
  
  <export>
    <!-- Это позволяет другим пакетам находить ваш launch-файл -->
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>